--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -458,6 +458,21 @@ contenga tutti gli <b>ApplicationModule</b> modificati nel modello</li>
 	  <td>
 	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
 	  </tr>
+	  
+	  <tr>
+	  <td><code>guigen.javac.encoding</code></td>
+	  <td>
+	  	<ul>
+	  	<li>scopo: se impostato permette di utilizzare un particolare encoding in fase di compilazione java.
+	  	</li>
+   		<li>default:(non impostato)</li>
+	  	</ul>
+	  </td>
+	  <td>
+	  </td>
+	  <td>
+	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
+	  </tr>
 	  </tbody>
 </table>
 </p>
