--- a/html/guigen/overview.html
+++ b/html/guigen/overview.html
@@ -63,11 +63,11 @@
  	su tecnologie Servlet/JSP e framework struts2/spring. Dalla versione 2.4.0 &egrave; possibile generare:
  	</p>
  	<ol>
- 	<li>un EAR deployabile in applicaqtion server <b>JBoss (4.3, 6.0, 6.2)</b> o <b>Weblogic9.2</b></li>
+ 	<li>un EAR deployabile in application server <b>JBoss (4.3, EAP 6.4.x)</b> o <b>Weblogic9.2</b></li>
  	</ol>
  	<p>
  	Per approfondimenti circa il mapping tram modello GUIGEN e piattaforma specifica 
- 	(ovvero per comprendere meglio le regole di generazione del codice a frointe del metamodello, &egrave;
+ 	(ovvero per comprendere meglio le regole di generazione del codice a fronte del metamodello, &egrave;
  	possibile consultare la sezione <a href="rationale.html">design rationale</a>.   	 
 	</p>
 	
