STDMDD-1823: possibilità di customizzare il nome del tar di distribuzione
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@6716 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -473,6 +473,23 @@ contenga tutti gli <b>ApplicationModule</b> modificati nel modello</li>
 	  <td>
 	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
 	  </tr>
+	  
+	  <tr>
+	  <td><code>guigen.overridden.tar.filename.prefix</code></td>
+	  <td>
+	  	<ul>
+	  	<li>scopo: se impostato permette di personalizzare il prefisso (prima del codice versione) 
+	  	del nome del file TAR.
+	    Se non impostato il prefisso &egrave; "${componente}srv".
+	  	</li>
+   		<li>default:(non impostato)</li>
+	  	</ul>
+	  </td>
+	  <td>
+	  </td>
+	  <td>
+	  	<i>struts2Basic.mwe e struts2BasicSingleModule.mwe </i></td>
+	  </tr>
 	  </tbody>
 </table>
 </p>
